# traninrunner

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: classify_resnet18.yaml  fusion_det3d.yaml  minimal.yaml
scripts/: train.sh
train/: __init__.py
train/cifar-10/: classify_cifar10.py
train/cifar-10/losses/: cross_entropy.py
train/cifar-10/model/: resnet18.py
train/cifar-10/transform/: cifar_dataloader.py
train/common/module/: conv.py  fpn.py
train/examples/: minimal_task.py
train/fusion_det3d/: fusion_det3d.py
train/fusion_det3d/eval/: __init__.py  decode.py  format.py  nuscenes_eval.py  vis.py
train/fusion_det3d/module/: bev_det3d_head.py  bevformer_encoder.py  fpn.py  lidar_encoder.py  light_backbone.py  positional_encoding.py  resnet_backbone.py
train/fusion_det3d/transform/: nuscenes_bev_dataset.py
trainrunner/: checkpoint.py  config.py  dist.py  freeze.py  metrics.py  plugins.py  run.py  utils.py
